--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background: #ebf1fa;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 10% 90%;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around; 
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #8c9094;
+  
 }
-
-.App-link {
-  color: #61dafb;
+.info-block{
+  height: 5rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+  height: 100%;
+    display: grid;
+  grid-template-rows: 70% 30%;
+  align-items: center;
+  justify-content: space-around; 
+}
+.linktosheets{
+  display: block;
+  background-color: #ebf1fa;
+    color: #8c9094;
+    border-radius: 11px;
+    font-size: 1.3rem;
+    font-weight: bold;
+    cursor: pointer;
+    height: 44px;
+    display: block;
+    border-color: #fff;
+    box-shadow: 0 0 10px rgb(0 0 0 / 50%);
+    font-family: 'Montserrat', sans-serif;
+    line-height: 3rem;
+    text-align: center;
+    text-decoration: none;
+}
+.linktosheets:hover{
+  background-color: #c4d7dc;
+    transition: background-color 0.5s ease;
+    border-color: transparent;
+    color: #ebf1fa;
+}
+.linktosheets:active{
+    border-style: inset;
 }
